# acme-agent-evals

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml  setup_github.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
analysis/: charts.py  compare_runners.py  evaluator_summary.py  summarize.py
configs/: model_matrix.json
docs/: api-reference.md  configuration.md  exporters.md  getting-started.md
eval/: README.md  __init__.py  arize_logging.py  evaluators.py  rate_limit.py  repo_control.py  repo_state.json  repo_state.py  resolve_numbers.py  run_eval.py  tasks.json  tasks.py
eval/runners/: base.py  pi_runner.py  raw_runner.py
eval/skills/: gh-cli-lobehub.md
examples/: basic_tracing.py  batch_export.py  custom_exporter.py
src/acme_sdk/: __init__.py  auth.py  client.py  config.py  models.py
src/acme_sdk/exporters/: __init__.py  console.py  grpc.py  json_file.py  otlp.py
src/acme_sdk/utils/: __init__.py  batching.py  retry.py  serialization.py
tests/: conftest.py  test_auth.py  test_client.py  test_models.py
tests/test_exporters/: test_json_file.py  test_otlp.py
tests/test_utils/: test_batching.py  test_retry.py
