[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "acme-agent-evals"
version = "1.1.0"
description = "Fictional Acme SDK project and GitHub-agent evaluation benchmark"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Acme SDK Contributors", email = "sdk-team@acme-sdk.dev" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-http>=1.20.0",
]

[project.optional-dependencies]
grpc = [
    "grpcio>=1.50.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.5",
    "respx>=0.20",
]
eval = [
    "anthropic>=0.55.0",
    "arize>=7.19.0",
    "matplotlib>=3.8.0",
    "openai>=2.36.0",
    "pandas>=2.2.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/OWNER/acme-agent-evals"
Documentation = "https://docs.acme-sdk.dev"
Repository = "https://github.com/OWNER/acme-agent-evals"
Changelog = "https://github.com/OWNER/acme-agent-evals/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/acme_sdk", "eval"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
